[package]
name = "backy-extract"
version = "0.3.0-dev"
authors = ["Christian Kauhaus <kc@flyingcircus.io>"]
edition = "2018"
description = "Rapid restore tool for backy"
license = "BSD-3-Clause"
repository = "https://github.com/ckauhaus/backy-extract"

[dependencies]
atty = "0.2"
byteorder = "1.2"
clap = { version = "2.32", features = ["wrap_help"] }
console = "0.7"
crossbeam = "0.6"
failure = "0.1"
fs2 = "0.4"
indicatif = "0.11"
lazy_static = "1.2"
libc = "0.2"
memmap = "0.7"
minilzo = "0.2"
num_cpus = "1.9"
parking_lot = "0.7"
rand = "0.6"
serde = "1"
serde_derive = "1"
serde_json = "1"
smallvec = "0.6"

[dev-dependencies]
flate2 = "1.0"
tar = "0.4"
tempdir = "0.3"

[profile.release]
debug = true
panic = "abort"
