[package]
name = "backy-extract"
version = "0.3.2-dev"
authors = ["Christian Kauhaus <kc@flyingcircus.io>"]
edition = "2018"
description = "Rapid restore tool for backy"
license = "BSD-3-Clause"
repository = "https://github.com/flyingcircusio/backy-extract"

[dependencies]
anyhow = "1"
atty = "0.2"
byteorder = "1.2"
chrono = "0.4"
clap = { version = "2.32", features = ["wrap_help"] }
console = "0.7"
crossbeam = "0.7"
env_logger = "0.7"
fnv = "1"
fs2 = "0.4"
fuse = { version = "0.3", optional = true }
indicatif = "0.13"
lazy_static = "1.2"
libc = "0.2"
log = "0.4"
memmap = "0.7"
minilzo = "0.2"
num_cpus = "1.9"
rand = "0.7"
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
smallstr = "0.1"
smallvec = "0.6"
structopt = "0.3"
thiserror = "1"
time = { version = "0.1", optional = true }

[features]
default = []
fuse_driver = ["fuse", "time"]

[[bin]]
name = "backy-fuse"
path = "src/bin/backy-fuse.rs"
required-features = [ "fuse_driver" ]

[dev-dependencies]
flate2 = "1.0"
tar = "0.4"
tempdir = "0.3"
maplit = "1"

[profile.release]
panic = "abort"
