[package]
name = "backy-extract"
version = "1.1.0-dev"
authors = ["Christian Kauhaus <christian@kauhaus.de>"]
edition = "2018"
description = "Rapid restore tool for backy"
license = "BSD-3-Clause"
repository = "https://github.com/flyingcircusio/backy-extract"

[dependencies]
anyhow = "1"
atty = "0.2"
byteorder = "1.2"
chrono = "0.4"
clap = { version = "2.32", features = ["wrap_help"] }
console = "0.14"
crossbeam = "0.8"
env_logger = "0.7"
fnv = "1"
fs2 = "0.4"
fuse = { version = "0.3", optional = true }
hex = { version = "0.4.3", optional = true }
indicatif = "0.13"
jemallocator = "0.3"
lazy_static = "1.2"
libc = "0.2"
log = "0.4"
lru = "0.7"
memmap = "0.7"
minilzo = "0.2"
murmur3 = { version = "0.5", optional = true }
num_cpus = "1.9"
rand = "0.7"
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
smallstr = { version = "0.2", features = ["serde"] }
smallvec = "0.6"
structopt = "0.3"
thiserror = "1"
time = { version = "0.1", optional = true }

[features]
default = []
fuse_driver = ["fuse", "time", "murmur3", "hex"]

[[bin]]
name = "backy-fuse"
path = "src/bin/backy-fuse.rs"
required-features = [ "fuse_driver" ]

[dev-dependencies]
flate2 = "1"
maplit = "1"
shells = "0.2"
tar = "0.4"
tempdir = "0.3"
twoway = "0.2"

[profile.release]
panic = "abort"
lto = "thin"
